plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'war'
}

group = 'com.safeone.dashboard'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
    configureEach {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }

    compileOnly {
        extendsFrom annotationProcessor
    }

    // 필요하지 않은 플랫폼 제외 (빌드 용량 줄이기 위함)
    all*.exclude group: 'org.bytedeco', module: 'ffmpeg-6.0-1.5.9-android-arm'
    all*.exclude group: 'org.bytedeco', module: 'ffmpeg-6.0-1.5.9-android-arm64'
    all*.exclude group: 'org.bytedeco', module: 'ffmpeg-6.0-1.5.9-macosx-arm64'
    all*.exclude group: 'org.bytedeco', module: 'ffmpeg-6.0-1.5.9-macosx-x86_64'
    all*.exclude group: 'org.bytedeco', module: 'ffmpeg-6.0-1.5.9-linux-arm64'
    all*.exclude group: 'org.bytedeco', module: 'ffmpeg-6.0-1.5.9-linux-armhf'
    all*.exclude group: 'org.bytedeco', module: 'ffmpeg-6.0-1.5.9-linux-ppc64le'
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation "org.springframework.boot:spring-boot-starter-security"
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1'
    implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.jasypt:jasypt-spring3:1.9.2'
    implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
    implementation 'javax.servlet:jstl:1.2'
    implementation 'org.jsoup:jsoup:1.16.1'
    implementation group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.14.0'
    implementation 'commons-codec:commons-codec:1.13'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation "org.apache.poi:poi:3.17"
    implementation "org.apache.poi:poi-ooxml:3.17"
    implementation group: 'org.bytedeco', name: 'javacv', version: '1.5.9'
    implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'windows-x86_64'
    implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'windows-x86'
    implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'linux-x86'
    implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'linux-x86_64'
    implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'macosx-x86_64'
    implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'macosx-arm64'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
    implementation group: 'com.github.kokorin.jaffree', name: 'jaffree', version: '2022.06.03'
    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
}

tasks.named('test') {
    useJUnitPlatform()
}
